# minishell

./: CMakeLists.txt  Makefile  README.md  hola  ls  ls.c  main.c  minishell  minishell.h  test.c
include/: minishell.h
includes/: minishell.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_printf_utils.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdetach.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  (+10 more)
libft/src/: ft_atod.c  (+53 more)
objs/: qvalidate.d  rvalidate.d
src/: builtins.c  builtins_2.c  cd.c  echo.c  execute.c  expand.c  export.c  ft_free.c  heredoc.c  init.c  main.c  pipe.c  pipe_redirect_separator.c  pipe_redirect_separator_2.c  qvalidate.c  redirection.c  rvalidate.c  rvalidate_2.c  signals.c  start_exit.c  to_double_pointer.c  unset.c  utils.c  utils_2.c  where.c
srcs/: builtins.c  builtins_2.c  cd.c  echo.c  execute.c  expand.c  export.c  ft_free.c  heredoc.c  init.c  main.c  pipe.c  pipe_redirect_separator.c  pipe_redirect_separator_2.c  pipe_redirect_validate_2.c  qvalidate.c  redirection.c  rvalidate.c  rvalidate_2.c  signals.c  start_exit.c  to_double_pointer.c  unset.c  utils.c  utils_2.c  where.c
(+1 files in other folders)
