cmake_minimum_required(VERSION 3.24)

set(CMAKE_C_STANDARD 99)
cmake_minimum_required(VERSION 2.8.12)
project(minishell C)
set(CMAKE_VERBOSE_MAKEFILE on)
include_directories(/usr/include/readline)
file(GLOB SOURCES "./*.c")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -Wall")
include_directories(libft)
file(GLOB SOURCES_LIBFT "libft/*.c")
add_library(LIBFT STATIC ${SOURCES_LIBFT})
include_directories(includes)
file(GLOB SOURCES_MINISHELL "srcs/*.c")
add_library(MINISHELL STATIC ${SOURCES_MINISHELL})
file(GLOB SOURCES "srcs/*.c" "libft/*.c")
add_executable(minishell ${SOURCES})
target_link_libraries(minishell readline)